--- a/styles/home.css
+++ b/styles/home.css
@@ -1,14 +1,47 @@
+@charset "UTF-8";
+@import url('https://fonts.googleapis.com/css2?family=Caudex:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 *{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 body{
     background-image: url(../imagens/Fundo\ Tabuleiro\ de\ Manobra\ e\ Tático-01-min.png);
+    font-family: 'caudex',sans-serif;
+    height: 100vh;
 }
 
 .logotipo {
     height: 250px;
-    width: 1500px;
+    width: auto;
 }
+
+nav > ul{
+    display: flex;
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+
+nav > ul > li{
+    margin-right: 20px;
+}
+
+nav > ul > li > a{
+    text-decoration: none;
+    padding: 10px;
+    display: block;
+    font-size: 45px;
+    font-weight: bold;
+    color: black;
+    border: 2px dashed black;
+}
+
+section > div > .tab1{
+    position: absolute;
+    width: 100%;
+}
+
+
 
