--- a/styles/home.css
+++ b/styles/home.css
@@ -10,16 +10,19 @@ body{
     background-image: url(../imagens/Fundo\ Tabuleiro\ de\ Manobra\ e\ Tático-01-min.png);
     font-family: 'caudex',sans-serif;
     height: 100vh;
+    width: 100vw;
 }
 
 .logotipo {
-    height: 250px;
+    position: relative;
+    height: 200px;
     width: auto;
+    left: 15%;
 }
-
+/*-----------------------Menu---------------------------------*/
 #menu_container{
     position: relative;
-    left: 50%;
+    left: 22%;
 }
 
 nav > ul{
@@ -42,7 +45,7 @@ nav > ul > li > a{
     color: black;
     border: 2px dashed black;
 }
-/*--------------------------------------------------------------------*/
+/*------------------------------Título destaque + Imagem destaque--------------------------------------*/
 .titulo{
     text-align: center;
     font-size: 60px;
@@ -53,11 +56,13 @@ nav > ul > li > a{
     position: relative;
     width: 900px;
     height: auto;
+    left: 10%;
     margin: 0;
 }
 
 #img_destaque > .tab1{
-    position: absolute;
+    position: absolute;	
+    margin: 10px;
 }
 
 #img_destaque > .tab1 > img{
@@ -66,10 +71,53 @@ nav > ul > li > a{
 }
 
 #img_destaque > .tab2{
-    position: absolute;
-    left: 250px;
+    position: relative;
+    left: 610px;
+    top: 10px;
+    margin: 10px;
 }
 #img_destaque > .tab2 > img{
     width: 600px;
     height: auto;
+}
+/*-------------------------------Resumo do Jogo----------------------------------------*/
+.resumo_jogo{
+    position: relative;
+}
+
+.resumo{
+    text-align: center;
+    margin-top: 50px;
+    font-size: 25px;
+}
+/*-------------------------------------Botão trailer-------------------------------------------*/
+#trailer{
+    position: relative;
+    text-align: center;
+    top: 50px;
+}
+
+.botao{
+    width: 80px;
+    height: 30px;
+}
+/*-----------------------------------Testemunhos/Comentários---------------------------------------*/
+section > .comment{
+    position: relative;
+}
+
+.titulo_comment{
+    position: absolute;
+    top: 50px;
+    left: 35%;
+    font-size: 40px;
+    margin: 10px 5px;
+    padding: 15px;
+}
+
+.comment_box{
+    position: relative;
+    display: flex;
+    width: 90%;
+    margin: 0;
 }
