--- a/styles/home.css
+++ b/styles/home.css
@@ -95,37 +95,27 @@ nav > ul > li > a{
     margin-top: 50px;
     font-size: 25px;
 }
-/*-------------------------------------Botão trailer-------------------------------------------*/
-#trailer{
-    position: relative;
-    text-align: center;
-    top: 50px;
-}
+/*-------------------------------------Trailer-------------------------------------------*/
 
-.botao{
-    width: 80px;
-    height: 30px;
-}
 /*-----------------------------------Testemunhos/Comentários---------------------------------------*/
-.opinion{
+.opinion_box{
     border: 1px solid black;
+    padding-bottom: 5rem;
+    text-align: center;
 }
-/*section > .comment{
-    position: relative;
-}*/
 
-.titulo_comment{
-    position: absolute;
-    top: 50px;
-    left: 35%;
-    font-size: 40px;
-    margin: 10px 5px;
-    padding: 15px;
+.opinion_box h2{
+    font-size: 36px;
 }
 
 .comment_box{
-    position: relative;
     display: flex;
+    justify-content: space-between;
     width: 90%;
-    margin: 0;
+    margin: 50px auto 0;
+}
+.comment{
+    flex: 1;
+    max-width: 275px;
+    margin: 0 20px;
 }
