--- a/styles/home.css
+++ b/styles/home.css
@@ -8,28 +8,29 @@
 
 body{
     background-image: url(../imagens/Fundo\ Tabuleiro\ de\ Manobra\ e\ Tático-01-min.png);
+    background-size: cover;
+    background-position: center;
     font-family: 'caudex',sans-serif;
     height: 100vh;
     width: 100vw;
 }
 
 .logotipo {
-    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
     height: 200px;
     width: auto;
-    left: 15%;
 }
 /*-----------------------Menu---------------------------------*/
-#menu_container{
-    position: relative;
-    left: 22%;
-}
-
 nav > ul{
     display: flex;
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
+    justify-content: center;
+    align-items: center;
+    width: 90%;
+    margin: 0 auto;
+    list-style: none;
 }
 
 nav > ul > li{
@@ -47,9 +48,11 @@ nav > ul > li > a{
 }
 /*------------------------------Título destaque + Imagem destaque--------------------------------------*/
 .img_principal{
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 90%;
-    height: auto;
-    /*border: 1px solid black;*/
+    margin: 0 auto;
 }
 .titulo{
     text-align: center;
@@ -58,64 +61,105 @@ nav > ul > li > a{
 }
 
 #img_destaque{
-    position: relative;
-    width: 900px;
-    height: auto;
-    left: 10%;
+    display: flex;
     margin: 0;
 }
 
 #img_destaque > .tab1{
-    position: absolute;	
     margin: 10px;
 }
 
 #img_destaque > .tab1 > img{
-    width: 600px;
+    width: 500px;
     height: auto;
 }
 
 #img_destaque > .tab2{
-    position: relative;
-    left: 610px;
-    top: 10px;
     margin: 10px;
 }
 #img_destaque > .tab2 > img{
-    width: 600px;
+    width: 500px;
     height: auto;
 }
 /*-------------------------------Resumo do Jogo----------------------------------------*/
 .resumo_jogo{
     position: relative;
+    padding: 10px;
 }
 
 .resumo{
-    text-align: center;
-    margin-top: 50px;
-    font-size: 25px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+    font-size: 20px;
+    width: 80%;
 }
 /*-------------------------------------Trailer-------------------------------------------*/
-
-/*-----------------------------------Testemunhos/Comentários---------------------------------------*/
-.opinion_box{
-    border: 1px solid black;
-    padding-bottom: 5rem;
-    text-align: center;
-}
-
-.opinion_box h2{
-    font-size: 36px;
-}
-
-.comment_box{
+video{
     display: flex;
-    justify-content: space-between;
-    width: 90%;
-    margin: 50px auto 0;
+    justify-content: center;
+    align-items: center;
+    width: 80%;
+    margin: 0 auto;
 }
-.comment{
-    flex: 1;
-    max-width: 275px;
-    margin: 0 20px;
+/*-----------------------------------Testemunhos/Comentários---------------------------------------*/
+.testemunho{
+    background-position: center;
+}
+
+.testemunho h2{
+    text-align: center;
+    font-weight: bold;
+    font-size: 45px;
+    padding: 10px;
+    margin-top: 20px;
+}
+
+.opinion_box{
+    padding: 15px;
+}
+
+.opinion_box ul{
+    display: flex;
+    width: 90%;
+    margin: 0 auto;
+}
+
+.opinion_box li{
+    list-style: none;
+    text-align: center;
+    padding: 20px;
+}
+
+.opinion_box h3{
+    margin-bottom: 25px;
+}
+
+.opinion_box p{
+    line-height: 24px;
+}
+/*----------------------------------------Rodapé-----------------------------------*/
+footer{
+    text-align: center;
+    font-weight: bold;
+    margin: 50px 0 100px;
+}
+
+footer ul{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 90%;
+    margin: 0 auto;
+}
+
+footer li{
+    list-style: none;
+    padding: 20px;
+}
+
+footer li a{
+    font-size: 25px;
+    text-decoration: none;
 }
