--- a/styles/home.css
+++ b/styles/home.css
@@ -184,12 +184,33 @@ footer li a{
     margin-top: 20px;
 }
 
-.componentes{
+.componentes ul{
     display: flex;
     flex-direction: row;
     width: 90%;
+    justify-content: center;
+    align-items: center;
+    margin: 10px auto;
+}
+
+.componentes ul li{
+    list-style: none;
+}
+
+.regras{
+    width: 90%;
+    text-align: center;
+    font-size: 20px;
+    margin: 0 auto;
 }
 
 .img1{
-    width: 30%;
+    width: 90%;
+}
+/*-------------------------------------------Diferencial------------------------------*/
+.diferencial{
+    text-align: center;
+    font-weight: bold;
+    font-size: 45px;
+    margin-top: 20px;
 }
