--- a/styles/home.css
+++ b/styles/home.css
@@ -219,3 +219,29 @@ form p{
     margin: 10px;
     padding: 10px;
 }
+
+.mensagem_grupo label{
+    display: block;
+    margin-bottom: 5px;
+}
+
+.mensagem_grupo input{
+    display: block;
+    width: 75px;
+    height: 30px;
+    font-size: 16px;
+    font-weight: bold;
+    border: 2px dashed black;
+    border-radius: 5px;
+}
+
+.titulo_form{
+    margin-top: 35px;
+    font-size: 25px;
+    font-weight: bold;
+}
+
+form{
+    width: 90%;
+    margin: 0 auto;
+}
