--- a/styles/home.css
+++ b/styles/home.css
@@ -245,3 +245,32 @@ form{
     width: 90%;
     margin: 0 auto;
 }
+/*---------------------------Patrocínios------------------------------------------------*/
+.dedicatoria{
+    width: 80%;
+    margin: 0 auto;
+}
+
+.dedicatoria p{
+    font-size: 20px;
+    text-align: center;
+    border: 1px solid grey;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    border-radius: 10px;
+}
+.patrocinadores-logos{
+    width: 90%;
+    margin: 0 auto;
+}
+.patrocinadores-logos img{
+    width: 300px;
+    height: 250px;
+}
+
+.logos-container{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 30px;
+}
