--- a/styles/home.css
+++ b/styles/home.css
@@ -233,6 +233,7 @@ form p{
     font-weight: bold;
     border: 2px dashed black;
     border-radius: 5px;
+    cursor: pointer;
 }
 
 .titulo_form{
@@ -256,7 +257,7 @@ form{
     text-align: center;
     border: 1px solid grey;
     margin-top: 50px;
-    margin-bottom: 50px;
+    /*margin-bottom: 50px;*/
     border-radius: 10px;
 }
 .patrocinadores-logos{
@@ -274,3 +275,58 @@ form{
     justify-content: space-between;
     gap: 30px;
 }
+
+/*-------------------------------------------Galeria------------------------------------------------*/
+.album{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    gap: 20px;
+    margin-top: 30px;
+}
+
+.album-card{
+    background-color: #f0f0f0;
+    border-radius: 8px;
+    padding: 15px;
+    text-align: center;
+    width: 200px;
+    cursor: pointer;
+    transition: transform 0.3s;
+}
+
+.album-card:hover{
+    transform: scale(1.05);
+}
+
+.album-card img{
+    width: 100%;
+    border-radius: 8px;
+}
+
+.album-card h3{
+    margin: 10px 0 0;
+}
+
+.gallery-content{
+    display: none;
+    margin-top: 30px;
+}
+
+.gallery-content img, .gallery-content video{
+    width: 100%;
+    max-width: 300px;
+    margin: 10px;
+}
+
+.gallery-content .close{
+    display: block;
+    margin-bottom: 20px;
+    background-color: #f44336;
+    color: white;
+    padding: 10px;
+    text-align: center;
+    width: 100px;
+    cursor: pointer;
+}
+
